--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/getgast/SEAN-billing/issues"
   },
-  "homepage": "https://github.com/getgast/SEAN-billing#readme"
+  "homepage": "https://github.com/getgast/SEAN-billing#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "pg": "^7.18.1"
+  }
 }
