--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
+    "pdfkit": "^0.11.0",
     "pg": "^7.18.1",
     "uuidv4": "^6.0.3"
   },
