add fonts, and fix issue with no encoding, add coment to model, req,res, and pdf

--- a/bm-sys-frontend/package.json
+++ b/bm-sys-frontend/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.19.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "ngx-extended-pdf-viewer": "^2.0.0-beta.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
