--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DATABASE_URL=postgresql://postgres:postgres@127.0.0.1:5432/reflection_db
 TYPE=db
 SECRET=justanotherrandomsecretkey
+NODE_ENV=local
