--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel api/server.js --out-dir build",
-    "dev-start": "babel-watch api/server.js"
+    "build": "babel ./API/server.js --out-dir build",
+    "dev-start": "babel-watch api/server.js",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
