--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bm-system",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "API/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel ./API/server.js --out-dir build",
