--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "API/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start-server": "node ./API/server.js",
     "build": "babel ./API/server.js --out-dir build",
     "dev-start": "babel-watch api/server.js",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run start-server"
   },
   "repository": {
     "type": "git",
