--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bm-system",
   "version": "1.0.0",
   "description": "",
-  "main": "build/API/server.js",
+  "main": "build/api/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-server": "node ./build/API/server.js",
