--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-server": "node ./build/API/server.js",
-    "build": "babel ./API/server.js --out-dir build",
+    "be-build": "babel ./API/server.js --out-dir build",
     "dev-start": "babel-watch api/server.js",
     "heroku-postbuild": "npm run start-server"
   },
