--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "build/api/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node api/server.js",
     "start-server": "node ./build/api/server.js",
     "be-build": "babel ./API/server.js --out-dir build",
     "dev-start": "babel-watch api/server.js",
+    "postinstall": "ng build --aot -prod",
     "heroku-postbuild": "npm run start-server"
   },
   "repository": {
@@ -28,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "ngx-extended-pdf-viewer": "^2.0.0-beta.2",
+    "path": "^0.12.7",
     "pdfkit": "^0.11.0",
     "pg": "^7.18.1",
     "uuidv4": "^6.0.3"
