--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "build/api/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node API/server.js",
+    "start": "node build/api/server.js",
     "start-server": "node ./build/api/server.js",
     "be-build": "babel ./API/server.js --out-dir build",
     "dev-start": "babel-watch api/server.js",
